kubernetes/security-policy/network-policy-egress-allow-ip-block.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-egress-allow-external
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 147.75.40.148/32
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
