kubernetes/security-policy/network-policy-egress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
